# scrabble_solver

./: Cargo.toml
frontend/: index.html
resources/: scrabble_letter_values.txt
src/: dictionary.rs  grid.rs  letter_bag.rs  lib.rs  main.rs  util.rs
