[package]
name = "ScrabbleSolver"
version = "0.1.0"
authors = ["Ethan Benjamin <ebenjamin@etsy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
time = "*"
rocket = "0.4.4"
rocket_cors = "0.5.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]

